# drake

./: .bazelrc  .gitignore  BUILD.bazel
.binder/: Dockerfile
bindings/pydrake/: BUILD.bazel  all.py  geometry_py_optimization.cc  math_py.cc  rational_function_py.cc  rational_function_types_pybind.h  symbolic_py.cc  symbolic_py_deconstruct.cc  symbolic_py_deconstruct.h  symbolic_types_pybind.h
bindings/pydrake/multibody/: BUILD.bazel  (+4 more)
bindings/pydrake/planning/: BUILD.bazel  all.py  common_robotics_utilities_py.cc  planning_py.cc  planning_py.h  planning_py_collision_checker.cc  planning_py_common_robotics_utilities.cc  planning_py_sampling_based_planners.cc  planning_py_trajectory_optimization.cc
bindings/pydrake/planning/test/: common_robotics_utilities_test.py
common/: symbolic_polynomial.cc  symbolic_rational_function.cc  symbolic_rational_function.h
geometry/optimization/: BUILD.bazel  bspline_graph_of_convex_sets.cc  bspline_graph_of_convex_sets.h  graph_of_convex_sets.cc  graph_of_convex_sets.h  hpolyhedron.cc  hpolyhedron.h  iris.cc  iris.h  iris_rational_forward_kinematics.cc  iris_rational_forward_kinematics.h  polytope_cover.cc  polytope_cover.h
multibody/inverse_kinematics/: BUILD.bazel  in_collision_constraint.cc
multibody/plant/: BUILD.bazel  slender_body.cc  slender_body.h
multibody/rational_forward_kinematics/: BUILD.bazel  README.md  configuration_space_collision_free_region.cc  configuration_space_collision_free_region.h  convex_geometry.cc  convex_geometry.h  cspace_free_region.cc  cspace_free_region.h  filtered_collision_pairs.cc  filtered_collision_pairs2.cc  generate_monomial_basis_util.cc  generate_monomial_basis_util.h  plane_side.cc  plane_side.h  rational_forward_kinematics.cc  rational_forward_kinematics.h  rational_forward_kinematics_internal.cc  rational_forward_kinematics_internal.h  redundant_inequality_pruning.cc  redundant_inequality_pruning.h
multibody/rational_forward_kinematics/test/: configuration_space_collision_free_region_test.cc  convex_geometry_test.cc  cspace_free_region_test.cc  generate_monomial_basis_util_test.cc  iiwa_shelf_demo.cc  rational_forward_kinematics_internal_test.cc  rational_forward_kinematics_test.cc  rational_forward_kinematics_test_utilities.cc  rational_forward_kinematics_test_utilities.h  rational_forward_kinematics_test_utilities2.cc  rational_forward_kinematics_test_utilities2.h  redundant_inequality_pruning_test.cc
planning/: BUILD.bazel  README.md  birrt_planner.cc  birrt_planner.h  cru_example.cc  default_state_types.cc  default_state_types.h  holonomic_kinematic_planning_space.cc  holonomic_kinematic_planning_space.h  joint_limits.cc  joint_limits.h  kinematic_trajectory_optimization.cc  kinematic_trajectory_optimization.h  make_planning_robot.cc  make_planning_robot.h  mbp_environment_collision_checker.cc  mbp_environment_collision_checker.h  parallel_birrt_planner.cc  parallel_birrt_planner.h  parallel_rrt_planner_tree.h  path_planning.cc  path_planning.h  path_planning_result.cc  path_planning_result.h  path_processor.cc  path_processor.h  per_thread_random_source.cc  per_thread_random_source.h  planning_example.ipynb  planning_space.cc  planning_space.h  prm_planner.cc  prm_planner.h  roadmap_with_packed_edge_spheres.cc  roadmap_with_packed_edge_spheres.h  rrt_planner.cc  rrt_planner.h  sampling_based_planners.h  sphere_robot_model_collision_checker.cc  sphere_robot_model_collision_checker.h  (+12 more)
planning/models/: BUILD.bazel  planar_iiwa14_one_sphere.urdf  planar_iiwa_dense_collision_welded_gripper.yaml  planar_iiwa_simple_collision_welded_gripper.yaml  schunk_wsg_50_block.sdf  schunk_wsg_50_welded_fingers.sdf  shelves.sdf
planning/trajectory_optimization/: BUILD.bazel  gcs_trajectory_optimization.cc  gcs_trajectory_optimization.h
planning/trajectory_optimization/test/: gcs_trajectory_optimization_test.cc
sandbox/: 2d_iris_example.ipynb  2d_rrt_vs_iris.ipynb  BUILD.bazel  amice_utils.py  dummy_notebook.ipynb  dump.txt  example_2d_growing_volumes.ipynb  example_2d_t_space_clean.ipynb  example_for_tobia.ipynb  example_iiwa_t_space_clean.ipynb  fast_planar_iiwa.ipynb  iiwa_example.ipynb  iiwa_example_three.ipynb  iiwa_example_two.ipynb  iris_in_t_space_clean.ipynb  iris_in_t_space_experiment.ipynb  iris_t_space.py  iris_test_amice.ipynb  meshcat_cpp_utils.py  multi_iiwa_example.ipynb  pinball_example_2d.ipynb  pinball_example_2d_clean.ipynb  planar2dof.urdf  planar_iiwa_dense_collision_welded_gripper.yaml  planar_iiwa_simple_collision_welded_gripper.yaml  prm.py  psatz.ipynb  rational_2d_iris_example.ipynb  rational_2d_iris_example_no_viz.ipynb  rational_func_test.ipynb  rrt.py  rrtIRIS.py  rrtiris.py  symbolic_parsing_helpers.py  t_space_utils.py  test.py  test_rrt.py  trial_notebook.ipynb  utils.py
sandbox/assets/: box.urdf  doublerob.urdf  planar1dof.urdf  planar2dof.urdf  shelves3.sdf  shelves4.sdf
sandbox/assets/s h e l v e s/: shelves2.sdf  shelves3.sdf
sandbox/vids/single_iiwa_comparisons/: iris_rev.mkv  prm.mkv  rrt.mkv
solvers/: ibex_solver.cc
sos_iris_certifier/: BUILD.bazel  bimanual_rational.ipynb  certified_iris_generator.py  iiwa_4shelves.ipynb  iris_plant_visualizer.py  iris_rational_cspace_test.ipynb  iris_t_space.py  iris_utils.py  pinball_iiwas.ipynb  pinball_rational.ipynb  planar_iiwa_dense_collision_no_gripper.yaml  planar_iiwa_dense_collision_welded_gripper.yaml  planar_iiwa_simple_collision_no_gripper.yaml  planar_iiwa_simple_collision_welded_gripper.yaml  prm.py  redundant_face_detector.ipynb  redundant_inequality_remover.py  rrt.py  schunk_wsg_50_block.sdf  sos_iris_example.ipynb  sos_iris_fused_iiwa_example.ipynb  spp.py  t_space_utils.py  test.ipynb  visualizations_utils.py
sos_iris_certifier/assets/: bimanual_iiwa.yaml  box_small.urdf  ground.urdf  lid.urdf  oneDOF_iiwa7_with_box_collision.sdf  oneDOF_iiwa7_with_box_collision_originalcolors.sdf  shelves2.sdf  twoDOF_iiwa7_with_box_collision.sdf  twoDOF_iiwa7_with_box_collision_originalcolors.sdf
tools/skylark/: pybind.bzl
tools/workspace/ibex/: BUILD.bazel  package.BUILD.bazel  repository.bzl
(+14 files in other folders)
