# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    data = [
        "assets/box.urdf",
        "assets/doublerob.urdf",
        "planar_iiwa14_one_sphere.urdf",
        "planar_iiwa_dense_collision_welded_gripper.yaml",
        "planar_iiwa_simple_collision_welded_gripper.yaml",
        "schunk_wsg_50_welded_fingers.sdf",
        "shelves.sdf",
    ],
    visibility = ["//visibility:public"],
)

drake_jupyter_py_binary(
    name = "fast_planar_iiwa",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

#
drake_py_library(
    name = "symbolic_parsing_helpers",
    srcs = [
        "symbolic_parsing_helpers.py",
    ],
    visibility = ["//visibility:public"],
)

drake_jupyter_py_binary(
    name = "iris_in_t_space_clean",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "iris_in_t_space_experiment",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "rational_func_test",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "trial_notebook",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "2d_iris_example",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)
