# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

filegroup(
    name = "models",
    data = [
        "assets/box.urdf",
        "assets/doublerob.urdf",
        "assets/ground.urdf",
        "assets/lid.urdf",
        "assets/shelves.sdf",
        "assets/shelves2.sdf",
        "assets/shelves3.sdf",
        "assets/shelves4.sdf",
        "planar_iiwa14_one_sphere.urdf",
        "planar_iiwa_dense_collision_welded_gripper.yaml",
        "planar_iiwa_simple_collision_welded_gripper.yaml",
        "schunk_wsg_50_welded_fingers.sdf",
        "shelves.sdf",
    ],
    visibility = ["//visibility:public"],
)

drake_jupyter_py_binary(
    name = "fast_planar_iiwa",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

#
drake_py_library(
    name = "symbolic_parsing_helpers",
    srcs = [
        "symbolic_parsing_helpers.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "t_space_utils",
    srcs = [
        "t_space_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_jupyter_py_binary(
    name = "iris_in_t_space_clean",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "iris_in_t_space_experiment",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "psatz",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "rational_func_test",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "dummy_notebook",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "trial_notebook",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "2d_iris_example",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "rational_2d_iris_example",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:t_space_utils",
    ],
)

drake_jupyter_py_binary(
    name = "rational_2d_iris_example_no_viz",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_py_library(
    name = "rrt",
    srcs = [
        "rrt.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "utils",
    srcs = [
        "utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "spp",
    srcs = [
        "spp.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["//bindings/pydrake"],
)

drake_py_library(
    name = "prm",
    srcs = [
        "prm.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["//bindings/pydrake"],
)

drake_jupyter_py_binary(
    name = "2d_rrt_vs_iris",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:rrtiris",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "iiwa_example",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:spp",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "iiwa_example_two",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:spp",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "iiwa_example_three",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:spp",
        "//sandbox:utils",
    ],
)

drake_py_library(
    name = "rrtiris",
    srcs = [
        "rrtiris.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

drake_py_library(
    name = "iris_t_space",
    srcs = [
        "iris_t_space.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
        "//sandbox:symbolic_parsing_helpers",
    ],
)

drake_jupyter_py_binary(
    name = "pinball_example_2d",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:iris_t_space",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:rrtiris",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:t_space_utils",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "pinball_example_2d_clean",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:iris_t_space",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:rrtiris",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:t_space_utils",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "example_2d_growing_volumes",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:iris_t_space",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:rrtiris",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:t_space_utils",
        "//sandbox:utils",
    ],
)

drake_jupyter_py_binary(
    name = "example_iiwa_t_space_clean",
    add_test_rule = 0,
    data = [
        "//manipulation/models/iiwa_description:models",
        "//sandbox:models",
    ],
    deps = [
        "//bindings/pydrake",
        "//sandbox:iris_t_space",
        "//sandbox:prm",
        "//sandbox:rrt",
        "//sandbox:spp",
        "//sandbox:symbolic_parsing_helpers",
        "//sandbox:t_space_utils",
        "//sandbox:utils",
    ],
)
