# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
    "drake_cc_test",
)
load("@drake//tools/skylark:test_tags.bzl", "gurobi_test_tags")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "rational_forward_kinematics",
    srcs = [
        "rational_forward_kinematics.cc",
        "rational_forward_kinematics_internal.cc",
    ],
    hdrs = [
        "rational_forward_kinematics.h",
        "rational_forward_kinematics_internal.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:symbolic",
        "//multibody/plant",
    ],
)

add_lint_tests()
